--- a/.github/workflows/deploy_to_staging.yml
+++ b/.github/workflows/deploy_to_staging.yml
@@ -43,15 +43,14 @@ jobs:
       - name: Deploy to AWS Staging Server
         uses: JimCronqvist/action-ssh@master
         with:
-          hosts: 'ubuntu@13.49.77.117'
+          hosts: 'ubuntu@13.51.178.191'
           privatekey: ${{secrets.ssh_key_dev_3}}
           command: |
             export NVM_DIR=/home/ubuntu/.nvm
             source /home/ubuntu/.nvm/nvm.sh
-
             cd /home/ubuntu/Assignment3/
             pwd
-            docker-compose up -d\
+            docker-compose up -d
             
       - name: deployment message passed
         if: success()
